# Emather-GameEngine

./: Cargo.toml  README.md
models/cube/: cube.mtl
shaders/: shader.wgsl  shader3d.wgsl
src/: main.rs
src/engine/: engine.rs  mod.rs
src/engine/components/: model.rs
src/engine/core/: application.rs  game_object.rs  mod.rs  window.rs
src/engine/input/: controller.rs  mod.rs
src/engine/renderer/: mesh.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
src/engine/resources/: loader.rs  mod.rs
src/engine/scene/: camera.rs  game_object.rs  light.rs  mod.rs  model.rs
